k8s/statefulset.yaml
apiVersion: apps/v1 
kind: StatefulSet
metadata:
  name: mysql
spec:
  serviceName: mysql-h
  podManagementPolicy: Parallel
  replicas: 3
  selector:
    matchLabels:
      app: mysql
 
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-volume
 
 
  volumeClaimTemplates:
  - metadata:
      name: mysql-volume
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
        limits:
          storage: 2Gi
