k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: marborg.io
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: goserver-service
            port: 
              number: 80
